moved shared content to the new shell app

--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -1,4 +1,4 @@
-{% extends 'discover/base.html' %}
+{% extends 'shell/base.html' %}
 {% load static i18n tpl_button tpl_trail_preview %}
 
 {% block title %}
@@ -25,7 +25,7 @@
                     <p><!-- empty --></p>
                     {% if user.is_authenticated %}
                         <div class="o-flex-inline has-gutter has-hidden-links">
-                            <link rel="stylesheet" href="{% static 'discover/styles/user_bar.css' %}">
+                            <link rel="stylesheet" href="{% static 'shell/styles/user_bar.css' %}">
                             <div>
                                 <ul class="user-bar">
                                     <li class="user-bar__button">
