--- a/trail/templates/trail/edit.html
+++ b/trail/templates/trail/edit.html
@@ -1,4 +1,4 @@
-{% extends 'discover/base.html' %}
+{% extends 'shell/base.html' %}
 {% load static i18n tpl_button tpl_trail_map %}
 
 {% block title %}Edit a GPX file{% endblock %}
