--- a/discover/templates/discover/index.html
+++ b/discover/templates/discover/index.html
@@ -1,4 +1,4 @@
-{% extends 'discover/base.html' %}
+{% extends 'shell/base.html' %}
 {% load static i18n tpl_button tpl_trail_preview %}
 
 {% block title %}{% trans 'Home' %}{% endblock %}
