--- a/member/templates/member/login.html
+++ b/member/templates/member/login.html
@@ -1,4 +1,4 @@
-{% extends 'discover/base.html' %}
+{% extends 'shell/base.html' %}
 {% load i18n tpl_button %}
 
 {% block title %}{% trans 'Sign in' %}{% endblock %}
