first web components + typescript

--- a/shell/static/shell/styles/shell.css
+++ b/shell/static/shell/styles/shell.css
@@ -117,7 +117,7 @@ a.has-semihidden-links:hover {
 }
 
 *:not(body) {
-    background: no-repeat center center;
+    /* background: no-repeat center center; */
     background-size: cover;
 }
 
