--- a/shell/templates/shell/tag_button.html
+++ b/shell/templates/shell/tag_button.html
@@ -1,4 +1,4 @@
-<div class="button__outer {{ class|default:'' }}">
+<lit-button class="button__outer {{ class|default:'' }}">
     {% if link %}
         <a class="button" href="{{ link }}">
             <span>{{ label }}</span>
@@ -8,4 +8,4 @@
             <span>{{ label }}</span>
         </button>
     {% endif %}
-</div>
+</lit-button>
