--- a/shell/templates/shell/base.html
+++ b/shell/templates/shell/base.html
@@ -30,11 +30,9 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-tap-highlight" content="no">
 
-    <link rel="preload" href="{% static 'shell/styles/shell.css' %}" as="style">
-    <link rel="preload" href="{% static 'shell/styles/base.css' %}" as="style">
-    <link rel="preload" href="{% static 'shell/styles/trail.css' %}" as="style">
+    <link rel="preload" href="{% static 'shell/webfonts/3755DA_0_0.woff2' %}" as="font">
+    <link rel="preload" href="{% static 'shell/webfonts/3755DA_1_0.woff2' %}" as="font">
     <link rel="preload" href="{% static 'shell/webfonts/3755DA_2_0.woff2' %}" as="font">
-    <link rel="preload" href="{% static 'shell/scripts/main.js' %}" as="script">
 
     <link rel="stylesheet" href="{% static 'shell/styles/shell.css' %}">
     <link rel="stylesheet" href="{% static 'shell/styles/base.css' %}">
