--- a/trail/templates/trail/tag_trail_preview.html
+++ b/trail/templates/trail/tag_trail_preview.html
@@ -1,31 +1,39 @@
-{% load i18n tpl_trail_map filter_gpx %}
+{% load i18n filter_gpx %}
 <li class="trail-preview__outer cell-{{ cell|default:'1of1' }} has-hidden-links">
-    <a href="{{ url }}" class="trail-preview">
-        <div class="trail-preview__map">
-            {% tpl_trail_map trail.file '180px' False %}
-            <h3 class="trail-preview__title">{{ trail.name|default:'Unnamed trail' }}</h3>
+    {% if url %}
+        <a href="{{ url|default:'' }}" class="trail-preview">
+    {% else %}
+        <div class="trail-preview has-no-hover">
+    {% endif %}
+    <div class="trail-preview__map">
+        <trail-map class="trail-map" data-url="{{ trail.file.url }}"></trail-map>
+        <h3 class="trail-preview__title">{{ trail.name|default:'Unnamed trail' }}</h3>
+    </div>
+    {% if trail.location or trail.distance or trail.uphill %}
+        <ul class="trail-preview__info-grid">
+            <li class="is-left" style="grid-column-end: span 2;">
+                <svg width="15" height="15" class="trail__icon">
+                    <use xlink:href="#home"></use>
+                </svg>
+                {{ trail.location|default:'n/a'|truncatechars:18 }}
+            </li>
+            <li class="is-center">
+                <svg width="15" height="15" class="trail__icon">
+                    <use xlink:href="#distance"></use>
+                </svg>
+                {{ trail.distance|floatformat }}km
+            </li>
+            <li class="is-right">
+                <svg width="15" height="15" class="trail__icon">
+                    <use xlink:href="#rocket"></use>
+                </svg>
+                {{ trail.uphill|floatformat:"0" }}m
+            </li>
+        </ul>
+    {% endif %}
+    {% if url %}
+        </a>
+    {% else %}
         </div>
-        {% if trail.location or trail.distance or trail.uphill %}
-            <ul class="trail-preview__info-grid">
-                <li class="is-left" style="grid-column-end: span 2;">
-                    <svg width="15" height="15" class="trail__icon">
-                        <use xlink:href="#home"></use>
-                    </svg>
-                    {{ trail.location|default:'n/a'|truncatechars:18 }}
-                </li>
-                <li class="is-center">
-                    <svg width="15" height="15" class="trail__icon">
-                        <use xlink:href="#distance"></use>
-                    </svg>
-                    {{ trail.distance|floatformat }}km
-                </li>
-                <li class="is-right">
-                    <svg width="15" height="15" class="trail__icon">
-                        <use xlink:href="#rocket"></use>
-                    </svg>
-                    {{ trail.uphill|floatformat:"0" }}m
-                </li>
-            </ul>
-        {% endif %}
-    </a>
+    {% endif %}
 </li>
