--- a/shell/templates/404.html
+++ b/shell/templates/404.html
@@ -4,6 +4,10 @@
 {% block title %}{% trans 'Page not found' %}{% endblock %}
 
 {% block content %}
-<h1>{% trans 'Page not found' %}</h1>
-<p>{% trans "We're sorry, but the requested page could not be found." %}</p>
+    <div class="o-section">
+        <div class="o-group">
+            <h1>{% trans 'Page not found' %}</h1>
+            <p>{% trans "We're sorry, but the requested page could not be found." %}</p>
+        </div>
+    </div>
 {% endblock %}
