--- a/member/templates/member/edit.html
+++ b/member/templates/member/edit.html
@@ -10,7 +10,7 @@
                 <h1>{% trans 'Edit profile' %}</h1>
                 <form action="{% url 'member__edit' %}" method="post">
                     {% csrf_token %}
-                    <ul class="django__form">
+                    <ul class="django__form__list">
                         {{ form.as_ul }}
                     </ul>
                     <div class="o-flex-inline has-horizontal-gutter">
