--- a/member/templates/member/password_change.html
+++ b/member/templates/member/password_change.html
@@ -7,11 +7,11 @@
     <div class="o-section">
         <div class="o-group o-flex-inline is-large">
             <div class="cell-2of3">
-                <h1>{% trans 'Change password' %}</h1>
+                <h1>{{ title }}</h1>
                 <p>{% trans "Please enter your old password, for security's sake, and then enter your new password twice so we can verify you typed it in correctly." %}</p>
-                <form method="post" action="{% url 'password_change' %}">
+                <form method="post" action="{% url 'password_change' %}" class="django__form">
                     {% csrf_token %}
-                    <ul class="django__form">
+                    <ul class="django__form__list">
                         {{ form.as_ul }}
                     </ul>
                     <div class="o-flex-inline has-horizontal-gutter">
@@ -31,5 +31,4 @@
             <div class="cell-1of3"><!-- empty --></div>
         </div>
     </div>
-
 {% endblock %}
