--- a/member/templates/member/password_change_done.html
+++ b/member/templates/member/password_change_done.html
@@ -7,7 +7,7 @@
     <div class="o-section">
         <div class="o-group o-flex-inline is-large">
             <div class="cell-2of3">
-                <h1>{% trans 'Password changed successfully.' %}</h1>
+                <h1>{{ title }}</h1>
                 <p>{% trans 'Your password was changed.' %}</p>
                 {% trans 'Go to my dashboard' as button_label %}
                 {% url 'dashboard__main' as button_link %}
