--- a/member/templates/member/login.html
+++ b/member/templates/member/login.html
@@ -11,7 +11,7 @@
                 <h1>{% trans 'Sign in' %}</h1>
                 <form method="post" action="{% url 'login' %}">
                     {% csrf_token %}
-                    <ul class="django__form">
+                    <ul class="django__form__list">
                         {{ form.as_ul }}
                     </ul>
                     {% trans 'Login' as button_label %}
