--- a/member/templates/member/register.html
+++ b/member/templates/member/register.html
@@ -11,7 +11,7 @@
                     <h1>{% trans 'Create an account' %}</h1>
                     <form action="{% url 'register' %}" method="post">
                         {% csrf_token %}
-                        <ul class="django__form">
+                        <ul class="django__form__list">
                             {{ form.as_ul }}
                         </ul>
                         {% trans 'Sign up' as button_label %}
