--- a/trail/templates/trail/new.html
+++ b/trail/templates/trail/new.html
@@ -11,7 +11,7 @@
                     <h1>{% trans 'Upload a GPX file' %}</h1>
                     <form action="{% url 'trail__new' %}" method="post" enctype="multipart/form-data">
                         {% csrf_token %}
-                        <ul class="django__form">
+                        <ul class="django__form__list">
                             {{ form.as_ul }}
                         </ul>
                         {% trans 'Save' as button_label %}
