--- a/trail/templates/trail/tag_trail_preview.html
+++ b/trail/templates/trail/tag_trail_preview.html
@@ -13,27 +13,31 @@
         {% endif %}
         <h3 class="trail-preview__title">{{ trail.name|default:'Unnamed trail' }}</h3>
     </div>
-    {% if trail.location or trail.distance or trail.uphill %}
-        <ul class="trail-preview__info-grid">
-            <li class="is-left" style="grid-column-end: span 2;">
-                <svg width="15" height="15" class="trail__icon">
-                    <use xlink:href="#home"></use>
-                </svg>
-                {{ trail.location|default:'n/a'|truncatechars:18 }}
-            </li>
-            <li class="is-center">
-                <svg width="15" height="15" class="trail__icon">
-                    <use xlink:href="#distance"></use>
-                </svg>
-                {{ trail.distance|floatformat }}km
-            </li>
-            <li class="is-right">
-                <svg width="15" height="15" class="trail__icon">
-                    <use xlink:href="#rocket"></use>
-                </svg>
-                {{ trail.uphill|floatformat:"0" }}m
-            </li>
-        </ul>
+    {% if trail.tracks|length > 0 %}
+        {% with trail.tracks|first|details as track %}
+            {% if track.location or track.distance or track.uphill %}
+                <ul class="trail-preview__info-grid">
+                    <li class="is-left" style="grid-column-end: span 2;">
+                        <svg width="15" height="15" class="trail__icon">
+                            <use xlink:href="#home"></use>
+                        </svg>
+                        {{ track.location|default:'n/a'|truncatechars:18 }}
+                    </li>
+                    <li class="is-center">
+                        <svg width="15" height="15" class="trail__icon">
+                            <use xlink:href="#distance"></use>
+                        </svg>
+                        {{ track.distance|floatformat }}km
+                    </li>
+                    <li class="is-right">
+                        <svg width="15" height="15" class="trail__icon">
+                            <use xlink:href="#rocket"></use>
+                        </svg>
+                        {{ track.uphill|floatformat:"0" }}m
+                    </li>
+                </ul>
+            {% endif %}
+        {% endwith %}
     {% endif %}
     {% if url %}
         </a>
