--- a/shell/templates/shell/base.html
+++ b/shell/templates/shell/base.html
@@ -36,8 +36,10 @@
 
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.js" as="script">
     <link rel="preload" href="https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/Leaflet.fullscreen.min.js" as="script">
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet-minimap/3.6.1/Control.MiniMap.min.js" as="script">
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.css" as="style">
     <link rel="preload" href="https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/leaflet.fullscreen.css" as="style">
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet-minimap/3.6.1/Control.MiniMap.min.css" as="style">
 
     <link rel="stylesheet" href="{% static 'shell/styles/shell.css' %}">
     <link rel="stylesheet" href="{% static 'shell/styles/base.css' %}">
