--- a/shell/static/shell/styles/trail.css
+++ b/shell/static/shell/styles/trail.css
@@ -102,6 +102,12 @@
     object-fit: cover;
 }
 
+.trail-map__fallback {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 
 /* --- Trail View --- */
 
